--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p id="username" style="color: white; font-weight: bold; font-size: large;">iUnknownBr</p> <!-- Username -->
       <!-- User Description -->
       <div class="user-description">
-        <p id="user-description" style="color: white;">luffyzra viado  </p>
+        <p id="user-description" style="color: white;">bal viadão gay  </p>
       </div>
       <!-- Links -->
       <div class="links">
